# LimeSuiteNG

./: CMakeLists.txt
GUI/: limeGUIFrame.cpp
GUI/LMS_Programing/: LMS_Programing_wxgui.cpp
GUI/boards/: pnlBoardControls.cpp  pnlBoardControls.h  pnlGPIO.cpp
GUI/chips/Si5351C/: Si5351C_wxgui.cpp
src/: CMakeLists.txt  lms7suiteAppFrame.cpp
src/API/: LMS_APIWrapper.cpp
src/CDCM6208/: CDCM6208_Dev.h
src/DSP/: Equalizer.cpp  Equalizer.h
src/FPGA_common/: FPGA_common.cpp  FPGA_common.h  WriteRegistersBatch.h
src/boards/: CMakeLists.txt  DeviceFactoryFTDI.cpp  DeviceFactoryFX3.cpp  DeviceFactoryPCIe.cpp  LMS7002M_SDRDevice.cpp  LMS7002M_SDRDevice.h
src/boards/LimeSDR/: CMakeLists.txt  LimeSDR.cpp  LimeSDRTest.cpp  USB_CSR_Pipe_SDRTest.cpp
src/boards/LimeSDR_Mini/: CMakeLists.txt  FPGA_Mini.h  LimeSDR_MiniTest.cpp  USB_CSR_Pipe_MiniTest.cpp
src/boards/LimeSDR_X3/: CMakeLists.txt  FPGA_X3.h  LimeSDR_X3.cpp  SlaveSelectShimTest.cpp
src/boards/LimeSDR_XTRX/: CMakeLists.txt  FPGA_XTRX.h  LimeSDR_XTRX.cpp
src/boards/MMX8/: CMakeLists.txt  MM_X8.cpp  MM_X8.h
src/boards_wxgui/: pnlEqualizer.cpp  pnlEqualizer.h  wxRegisterPtr.h
src/chips/LMS7002M/: RxTxCalibrations.cpp
src/cli/: limeConfig.cpp  limeDevice.cpp  limeFLASH.cpp  limeSPI.cpp  limeTRX.cpp
src/comms/PCIe/: CMakeLists.txt  LMS64C_FPGA_Over_PCIe.h  LMS64C_LMS7002M_Over_PCIe.h  LitePCIe.h  PCIE_CSR_PipeTest.cpp  TRXLooper_PCIE.cpp
src/comms/USB/: CMakeLists.txt  LMS64C_ADF4002_Over_USB.h  LMS64C_FPGA_Over_USB.h  LMS64C_LMS7002M_Over_USB.h  TRXLooper_USB.cpp  USBDMA.cpp  USBDMA.h  USBEntry.cpp  USBEntry.h  USBGeneric.cpp  USBGeneric.h  USBTransferContext.cpp  USBTransferContext.h  USB_CSR_PipeMock.h
src/comms/USB/FT601/: CMakeLists.txt  FT601.cpp  FT601.h  USBTransferContext_FT601.h
src/comms/USB/FX3/: CMakeLists.txt  FX3.h
src/comms/protocols/: CMakeLists.txt  DataPacket.h  LMS64CProtocol.cpp  LMS64CProtocol.h
src/include/limesuiteng/: DeviceNodeClass.h  SDRDevice.h
src/lms7002_wxgui/: lms7002_pnlCLKGEN_view.cpp
src/parsers/: CoefficientFileParserTest.cpp
src/protocols/: BufferInterleaving.cpp  BufferInterleavingTest.cpp  CustomParameterReadTest.cpp  CustomParameterWriteTest.cpp  DeviceResetTest.cpp  FPGA_SPITest.cpp  FirmwareToDescriptorTest.cpp  GPIODirReadTest.cpp  GPIODirWriteTest.cpp  GPIOReadTest.cpp  GPIOWriteTest.cpp  GetFirmwareInfoTest.cpp  LMS7002M_SPITest.cpp  SerialPortMock.h  TRXLooper.cpp  TRXLooper.h  TxBufferManager.h
src/tests/: CMakeLists.txt  LibraryTestEntry.cpp  TestEntry.cpp
src/utilities/: pll_sweep.cpp
src/vectorization/: CMakeLists.txt
